# SpectralShift

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml  release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
Source/Component/: CustomLookAndFeel.h  XYPad.cpp  XYPad.h
Source/DSP/: EnvelopeFollower.h  PitchDetection.h  SpectralCentroid.h  TiltEQ.h  TransientShaper.h
cmake/: GitHubENV.cmake
packaging/linux/: README.md  install.sh  uninstall.sh
packaging/macos/: conclusion.html  distribution.xml
packaging/resources/: EULA.txt  conclusion.html  icon.icns  license.html  welcome.html
packaging/windows/: LICENSE.rtf  installer.iss  installer.wxs
resources/: SpectralShiftExample-BarksMultiplePitchFormats.flac
